force-app/main/default/objects/Contract/fields/crms11__Recreate_Billing_Journals__c.field-meta.xml
<CustomField>
    <fullName>crms11__Recreate_Billing_Journals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Force the Billing Journal records associated with this Contract to be recalculated and recreated</description>
    <inlineHelpText>Force the Billing Journal records associated with this Contract to be recalculated and recreated</inlineHelpText>
    <label>Recreate Billing Journals</label>
    <type>Checkbox</type>
</CustomField>