force-app/main/default/objects/Contract/fields/crms11__Renewal_Opp_Close_Date_Adjustment_Days__c.field-meta.xml
<CustomField>
    <fullName>crms11__Renewal_Opp_Close_Date_Adjustment_Days__c</fullName>
    <description>A positive number makes the Close Date of the Renewal Opportunity later than the Contract End Date. A negative number makes the Close Date earlier.</description>
    <inlineHelpText>A positive number makes the Close Date of the Renewal Opportunity later than the Contract End Date. A negative number makes the Close Date earlier.</inlineHelpText>
    <label>Renewal Opp Close Date Adjustment (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>