force-app/main/default/objects/Contract/fields/crms11__Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>crms11__Renewal_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Opportunity that contains subscription line items for the renewal of this contract.</description>
    <inlineHelpText>The Opportunity that contains subscription line items for the renewal of this contract.</inlineHelpText>
    <label>Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts To Renew</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>