force-app/main/default/objects/Contract/fields/crms11__Renewal_Opportunity_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>crms11__Renewal_Opportunity_Creation_Date__c</fullName>
    <description>The date on which the Renewal Opportunity will be automatically created (requires the Renewal Opportunity Scheduler to be running)</description>
    <inlineHelpText>The date on which the Renewal Opportunity will be automatically created</inlineHelpText>
    <label>Renewal Opportunity Creation Date</label>
    <type>Date</type>
</CustomField>