force-app/main/default/objects/Contract/fields/crms11__Renewal_Term_months__c.field-meta.xml
<CustomField>
    <fullName>crms11__Renewal_Term_months__c</fullName>
    <description>The Contract Term (in months) to be be set on the Renewal Opportunity</description>
    <inlineHelpText>The Contract Term (in months) to be be set on the Renewal Opportunity</inlineHelpText>
    <label>Renewal Term (months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>