force-app/main/default/objects/Contract/fields/crms11__Scheduled_Billing_Period_months__c.field-meta.xml
<CustomField>
    <fullName>crms11__Scheduled_Billing_Period_months__c</fullName>
    <description>The period (in months) between Scheduled Billing records for this Contract</description>
    <inlineHelpText>The period (in months) between Scheduled Billing records for this Contract</inlineHelpText>
    <label>Scheduled Billing Period (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>