force-app/main/default/objects/Contract/fields/crms11__Total_Billing__c.field-meta.xml
<CustomField>
    <fullName>crms11__Total_Billing__c</fullName>
    <description>The sum of the Billing / Billing Journal records associated with this Contract</description>
    <inlineHelpText>The sum of the Billing / Billing Journal records associated with this Contract</inlineHelpText>
    <label>Total Billing</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>