force-app/main/default/objects/Contract/recordTypes/crms11__Subscription.recordType-meta.xml
<RecordType>
    <fullName>crms11__Subscription</fullName>
    <active>true</active>
    <label>Subscription</label>
</RecordType>